Web Inspector: Fix shape-highlight layout tests https://bugs.webkit.org/show_bug.cgi?id=146080

Reviewed by Joseph Pecoraro.

Source/WebCore:

* inspector/InspectorOverlay.cpp:
(WebCore::buildObjectForShapeOutside): Now properly returns the shape margin.

LayoutTests:

* http/tests/inspector/dom/shapes-test.js: Updated.


Canonical link: https://commits.webkit.org/164886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186639 268f45cc-cd09-0410-ab3c-d52691b4dbfc